--- a/app/src/main/res/layout/team_roster_fragment.xml
+++ b/app/src/main/res/layout/team_roster_fragment.xml
@@ -11,7 +11,7 @@
     <include
         android:id="@+id/includeTeamRosterLudiListViewTeams"
         layout="@layout/ludi_roster_view"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
