--- a/app/src/main/res/layout-port/fragment_list_formations_portrait.xml
+++ b/app/src/main/res/layout-port/fragment_list_formations_portrait.xml
@@ -46,6 +46,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+
     </RelativeLayout>
 
     <!-- The Roster List -->
@@ -57,6 +59,36 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:src="@drawable/add_light"
         app:altSrc="@drawable/add_light" />
+
+    <LinearLayout
+        android:id="@+id/formationBuilderRosterTypeLinearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/formationRosterListsLinearLayout"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/formationBuilderRosterTypeTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:text="Roster Type"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/formationBuilderRosterTypeSpinner"
+            android:layout_width="145dp"
+            android:layout_height="35dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/border_shadow_white" />
+
+    </LinearLayout>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/formationRosterListsLinearLayout"
