--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,12 @@
 <!-- Created by ChazzCoin : October 2022 -->
 
 <resources>
-
     <color name="ysrWindowBackground">#F6F6F5</color>
+<!--    <color name="ysrWindowBackground">#003366</color>-->
+
+    <color name="ludiBlue">#003366</color>
+    <color name="ludiBlack">@color/black</color>
+    <color name="ludiWhite">#F6F6F5</color>
 
     <color name="ysrBlue">#769FCA</color>
     <color name="ysrRed">#FF6C65</color>
