--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -94,9 +94,9 @@
         <item name="android:layout_marginEnd">-15dp</item>
     </style>
 
-<!--    <style name="YSR.ActionBar">-->
-<!--        <item name="android:background">@color/ysrBlue</item>-->
-<!--    </style>-->
+    <style name="YSR.ActionBar" parent="MaterialAlertDialog.Material3">
+        <item name="android:background">@color/ysrBlue</item>
+    </style>
 
     <style name="FT_Dialog" parent="Theme.AppCompat.Light">
         <item name="android:windowMinWidthMajor">75%</item>
